--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ BlendFiles/* linguist-vendored
 *.cs linguist-language=C#
 
 # Ignore ShaderLab-related files
+*.compute linguist-detectable=false
 *.shader linguist-detectable=false
 *.hlsl linguist-detectable=false
 *.cginc linguist-detectable=false
